chore: prepare for production deployment onto Render and Vercel